--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Flask-Bcrypt==0.7.1
 Flask-Login==0.5.0
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
+gunicorn==20.1.0
 isort==5.8.0
 itsdangerous==1.1.0
 Jinja2==2.11.3
